[package]
name = "fayawall"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
aya = "0.13.1"
aya-log = "0.2.1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
tokio = { version = "1.47", features = [
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"

[build-dependencies]
anyhow = "1.0.99"
aya-build = "0.1.2"
fayawall-ebpf = { path = "../fayawall-ebpf" }
