[package]
name = "firewall"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
aya = "0.13.1"
aya-log = "0.2.1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.47", features = [
  "macros",
  "rt-multi-thread",
] }

[build-dependencies]
anyhow = "1.0.99"
aya-build = "0.1.2"
firewall-ebpf = { path = "../firewall-ebpf" }
